--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name='viewport' content='device=device-width, initial-scale=1'/>
+    <link rel='stylesheet' href='css/style.css'>
+    <link type='text/css' rel='stylesheet' href='https://fonts.googleapis.com/ss?family=Montserrat'/>
+    <title>Da FOX</title>
+
 </head>
 <body>
     <h1> Fox </h1>
+    <p><img style="-webkit-user-select: none" src="http://t01.deviantart.net/cygGonqzoPbsNbo6WyDCHBGsLBo=/fit-in/300x900/filters:no_upscale():origin()/pre09/76f7/th/pre/f/2011/331/c/b/fox_by_kawiko-d4hh8qt.png"></p>
+    <h1>What do you say?</h1>
 </body>
 </html>
